fixed article overflow issue

--- a/components/Posts/Posts.module.scss
+++ b/components/Posts/Posts.module.scss
@@ -34,6 +34,7 @@
     border-radius: 2px;
     background-color: var(--darkblue);
     line-height: 1.8rem;
+    overflow-x: auto;
     code {
       padding: 0;
       background-color: unset;
